Fix scrollbars for archive pages PRE elements

--- a/src/_sass/template-archives.sass
+++ b/src/_sass/template-archives.sass
@@ -45,6 +45,29 @@
     main
         display: block
         margin: 10px 16px
+        max-width: 100vw
+        word-wrap: break-word
+    pre
+        max-width: 90vw
+        margin-top: 10px
+        margin-bottom: 10px
+        scrollbar-color: black white
+        scrollbar-width: thin
+        scrollbar-gutter: stable
+        overflow-wrap: break-word
+        overflow-x: auto
+        &::-webkit-scrollbar
+            width: 5px
+            height: 8px
+            background-color: #aaa
+        &::-webkit-scrollbar:vertical
+            width: 11px
+        &::-webkit-scrollbar:horizontal
+            height: 11px
+        &::-webkit-scrollbar-thumb
+            border-radius: 8px
+            border: 2px solid white
+            background-color: rgba(0, 0, 0, .5)
 
     @media (max-width: 800px)
         header
